--- a/infrastructure/sources/menu.yaml
+++ b/infrastructure/sources/menu.yaml
@@ -4,4 +4,4 @@ metadata:
   name: menu
 spec:
   interval: 30m
-  url: https://cciobanu98.github.io/Restaurant/
+  url: https://cciobanu98.github.io/RestaurantApp/
