--- a/apps/base/menu/release.yaml
+++ b/apps/base/menu/release.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     cache: redis-master.redis:6379
     image:
-      tag: "1.0"
+      tag: "main"
     ingress:
       enabled: true
     podAnnotations:
