--- a/apps/base/order-service/kustomization.yaml
+++ b/apps/base/order-service/kustomization.yaml
@@ -1,7 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: menu
+namespace: restaurant-app
 resources:
-  - namespace.yaml
-  - redis-state-component.yaml
   - release.yaml
