--- a/apps/base/users-service/kustomization.yaml
+++ b/apps/base/users-service/kustomization.yaml
@@ -1,8 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: restaurant-app
 resources:
-  - sources
-  - redis
-  - dapr
-  - rabbitmq
-  - app
+  - release.yaml
