--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -1,7 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: menu
+namespace: restaurant-app
 resources:
-  - ../base/menu
+  - ../base/menu-service
+  - ../base/order-service
+  - ../base/users-service
 patchesStrategicMerge:
-  - menu-values.yaml
+  - menu-service-values.yaml
+  - order-service-values.yaml
+  - users-service-valies.yaml
