--- a/apps/staging/order-service-values.yaml
+++ b/apps/staging/order-service-values.yaml
@@ -1,8 +1,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: menu
-  namespace: menu
+  name: order-service
+  namespace: restaurant-app
 spec:
   chart:
     spec:
@@ -12,7 +12,7 @@ spec:
   values:
     ingress:
       hosts:
-        - host: menu.staging
+        - host: order-service.staging
           paths:
             - path: /
               pathType: ImplementationSpecific
