--- a/infrastructure/app/redis-users-state-component.yaml
+++ b/infrastructure/app/redis-users-state-component.yaml
@@ -1,8 +1,8 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: menu-state-store
-  namespace: menu
+  name: users-state-store
+  namespace: restaurant-app
 spec:
   type: state.redis
   version: v1
