--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: restaurant-app
 resources:
+  - ../base/infrastructure
   - ../base/menu-service
   - ../base/order-service
   - ../base/users-service
