--- a/infrastructure/sources/restaurant-app.yaml
+++ b/infrastructure/sources/restaurant-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: menu
+  name: restaurant-app
 spec:
   interval: 30m
   url: https://cciobanu98.github.io/RestaurantApp/
